added crets-trough correlation to netcdf output (w3ounfmetamd.F90). Bug fixes to w3iogomd.F90, w3odatmd.F90

--- a/model/bin/cmplr.env
+++ b/model/bin/cmplr.env
@@ -133,7 +133,8 @@ if [ "$cmplr" == "intel" ]          || [ "$cmplr" == "intel_debug" ]    || [ "$c
 
   # compiler
   comp_seq='ifort'
-  comp_mpi='mpiifort'
+  comp_mpi='mpifort'
+  #comp_mpi='mpiifort'
 
   # cray compiler
   if [ ! -z "$(echo $cmplr | grep wcoss_cray)" ]  || [ "$cmplr" == "gaea.intel" ] || [ "$cmplr" == "wcoss2" ] || [[ $cmplr == ukmo_cray* ]]; then
